# Vox-Health

./: .env.example  .gitignore  Anchor.toml  README.md  VOXHEALTH_README.md  VOXHEALTH_SPEC.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/app/: page.tsx
app/billing/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/doctor/: page.tsx
app/onboarding/: page.tsx
components/billing/: lifi-widget-mount.tsx
components/dashboard/: header-bar.tsx  quick-stats-row.tsx  sidebar.tsx  today-view.tsx
components/doctor/: doctor-portal.tsx
components/eldritch/: count-up.tsx  final-cta.tsx  footer.tsx  hero.tsx  how-it-works.tsx  nav.tsx  patients-section.tsx  problem-section.tsx  sponsor-strip.tsx  stack-section.tsx  tracks-section.tsx
components/landing/: doctor-sharing.tsx  eldritch-features.tsx  features-section.tsx  final-cta.tsx  footer.tsx  hero-section.tsx  how-it-works-premium.tsx  how-it-works.tsx  navigation.tsx  premium-footer.tsx  premium-hero.tsx  pricing-section.tsx  problem-section.tsx  product-showcase.tsx  security-badges.tsx  services-section.tsx  social-proof.tsx  testimonials.tsx  trust-signals.tsx  voice-comparison.tsx  voice-demo-section.tsx
context/: auth-context.tsx  recording-context.tsx  wallet-context.tsx
hooks/: use-health-agent.ts  use-timer.ts  use-voice-recorder.ts
lib/: env.ts  solana.ts  storage.ts  voice.ts
programs/voxhealth/: Cargo.toml
programs/voxhealth/src/: lib.rs
scripts/: verify-integration.ts
tests/: voxhealth.ts
types/: index.ts
(+45 files in other folders)
